// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Input field properly 1`] = `
<div
  className="input "
>
  <label
    className="input__label"
  >
    test
  </label>
  <input
    className="input__input"
  />
</div>
`;

exports[`should render Input field with error 1`] = `
<div
  className="input "
>
  <label
    className="input__label"
  >
    test
  </label>
  <input
    className="input__input"
  />
  <span
    className="input-error"
  >
    error
  </span>
</div>
`;
